--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
         <a class="nav-link" href="/about">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Smart India Hackathon</a>
+        <a class="nav-link" href="/getuserfeedbackform">SIH UserFeedBack</a>
       </li>
     </ul>
     <!-- Links -->
