--- a/templates/result.html
+++ b/templates/result.html
@@ -4,6 +4,33 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-6" style="margin: 1rem auto 0 auto;">
+            <!-- Card -->
+            <div class="card">
+
+                <!-- Card image -->
+                <div class="view overlay">
+                    <img class="card-img-top"
+                        src="/static/img3.jpg"
+                        alt="Card image cap">
+                    <a href="#!">
+                        <div class="mask rgba-white-slight"></div>
+                    </a>
+                </div>
+
+                <!-- Card content -->
+                <div class="card-body">
+
+                    <!-- Text -->
+                    <p class="card-text">Link : {{text}} </p>
+
+                </div>
+
+            </div>
+            <!-- Card -->
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6" style="margin: 1rem auto 0 auto;">
             {% if mal %}
             <div class="alert alert-success alert-dismissible fade show" role="alert">
                 <strong>Legitimate Url</strong>
