--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark primary-color sticky-top">
 
   <!-- Navbar brand -->
-  <a class="navbar-brand" href="#">Navbar</a>
 
   <!-- Collapse button -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
@@ -34,16 +33,19 @@
 
     <!-- Links -->
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="{% url "index" %}">Home
+      <li class="nav-item">
+        <a class="nav-link" href="/">Home
           <span class="sr-only">(current)</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/about">About</a>
+        <a class="nav-link" href="/geturlhistory">Url History</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/getuserfeedbackform">SIH User FeedBack</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/about">About Application</a>
       </li>
     </ul>
     <!-- Links -->
