--- a/templates/404.html
+++ b/templates/404.html
@@ -4,7 +4,7 @@
 <div class="container-fluid" style="margin-top: 1rem;">
     <div class="row">
         <div class="col-md-6" style="margin: 0 auto;">
-            <img src="{% load static "img4.jpg" %}" class="img-fluid">     
+            <img src="https://raw.githubusercontent.com/janmisek/ember-error-handler/master/github/error-prod.png" class="img-fluid">     
         </div>
     </div>
     <div class="row" style="margin-bottom: 1rem;">
