--- a/templates/index.html
+++ b/templates/index.html
@@ -45,6 +45,9 @@
         <a class="nav-link" href="/getuserfeedbackform">SIH User FeedBack</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="/discuss">Discuss</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="/about">About Application</a>
       </li>
     </ul>
