--- a/templates/index.html
+++ b/templates/index.html
@@ -99,10 +99,10 @@
           <div class="row">
   
               <div class="col-md-6" >
-                  <img src="/static/img1.jpg" class="img-fluid">
+                  <img src="{% static 'img1.jpg' %}" class="img-fluid">
               </div>
               <div class="col-md-6">
-                  <img src="/static/img2.jpg" class="img-fluid">
+                  <img src="{%static 'img2.jpg' %}" class="img-fluid">
               </div>
             
       </div>
