--- a/templates/discuss.html
+++ b/templates/discuss.html
@@ -1,5 +1,5 @@
 {% extends 'index.html' %}
-{% block title %}Page Not Found{% endblock %}
+{% block title %}Discuss{% endblock %}
 {% block content %}
 <div class="container-fluid" style="margin-top: 1rem;">
     <div class="row">
