--- a/templates/list.html
+++ b/templates/list.html
@@ -1,5 +1,5 @@
 {% extends 'index.html' %}
-{% block title %}Url History{% endblock %}
+{% block title %}DataBase{% endblock %}
 {% block content %}
 <div class="container-fluid" style="margin-top: 1rem;">
     <div class="row">
